--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
         <h2>My Projects</h2>
       </div>
       <hr>
-      <a href="" class="btn btn-info" role="button">Project 1</a>
-      <a href="" class="btn btn-info" role="button">Project 2</a>
-      <a href="" class="btn btn-info" role="button">Project 3</a> 
+      <a href="Blocitoff/app/views/welcome/index.html.erb" class="btn btn-info" role="button">Project 1</a>
+      <a href="bloc/bloc-jams/index.html" class="btn btn-info" role="button">Project 2</a>
+      <a href="Basic-Rails-App/app/views/welcome/index.html.erb" class="btn btn-info" role="button">Project 3</a> 
     </div>
     <hr>
     <div id='contact'>
