--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<div id='terra' class='terra'>
 		</div>
 		<br>  
-		<div id='about'>
+		<div id='about' class='about'>
       <hr>
 			<h2>Who am I?</h2>
 			<hr>
@@ -31,20 +31,30 @@
 			</div>
     </div>
     <hr>
-    <div id='projects'>
+    <div id='projects' class='projects'>
       <div>
         <h2>My Projects</h2>
       </div>
       <hr>
-      <a href="Blocitoff/app/views/welcome/index.html.erb" class="btn btn-info" role="button">Project 1</a>
-      <a href="bloc/bloc-jams/index.html" class="btn btn-info" role="button">Project 2</a>
-      <a href="Basic-Rails-App/app/views/welcome/index.html.erb" class="btn btn-info" role="button">Project 3</a> 
+      <a href="Blocitoff/app/views/welcome/index.html.erb" class="btn btn-primary btn-lg btn-block" role="button">
+        <img src="../Portfolio/assets/images/div-image.2.jpg" alt="Project 1" class="img-thumbnail">
+      </a>
+      <a href="bloc/bloc-jams/index.html" class="btn btn-primary btn-lg btn-block" role="button">
+        <img src="../Portfolio/assets/images/div-image.3.jpg" alt="Project 2" class="img-thumbnail">
+      </a>
+      <a href="Basic-Rails-App/app/views/welcome/index.html.erb" class="btn btn-primary btn-lg btn-block" role="button">
+        <img src="../Portfolio/assets/images/div-image.4.jpg" alt="Project 3" class="img-thumbnail">
+      </a> 
     </div>
     <hr>
     <div id='contact'>
-      <a href="https://www.linkedin.com/in/genaro-loera-5545b5101?trk=nav_responsive_tab_profile" class="btn btn-info" role="button">Contact Info</a> 
+      <p>e-mail: gloera5@live.com</p>
+      <a href="https://www.linkedin.com/in/genaro-loera-5545b5101?trk=nav_responsive_tab_profile" class="btn btn-info" role="button">Linked In Profile</a> 
     </div>
- 
+    <div>
+      <hr>
+    </div>  
+     
 	  <script type='text/javascript'>
 		var clock = new THREE.Clock();
 		var parentElem = document.getElementById('terra');
