added mouse over attribute

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			<h2>Who am I?</h2>
 			<hr>
       <p>My name is Genaro Loera</p>
-      <p>My main focus is frontend web development and design.</p>
+      <p>My main focus is web development and design.</p>
       <p>I learned through Bloc onling programming bootcamp.</p>
 		</div>
 		<br>
@@ -26,8 +26,21 @@
 			<h2>What I know?</h2>	
 			<hr>
 			<div>
-				<h4>JavaScript</h4>
-				<h4>HTML and CSS</h4>
+        <h4>
+          <ul>
+            <li>JavaScript</li>
+          </ul>
+        </h4>
+				<h4>
+          <ul>
+            <li>HTML and CSS</li>
+          </ul>
+        </h4>
+        <h4>
+          <ul>
+            <li>Ruby</li>
+          </ul>
+        </h4>
 			</div>
     </div>
     <hr>
@@ -36,20 +49,16 @@
         <h2>My Projects</h2>
       </div>
       <hr>
-      <a href="Blocitoff/app/views/welcome/index.html.erb" class="btn btn-primary btn-lg btn-block" role="button">
-        <img src="../Portfolio/assets/images/div-image.2.jpg" alt="Project 1" class="img-thumbnail">
-      </a>
-      <a href="bloc/bloc-jams/index.html" class="btn btn-primary btn-lg btn-block" role="button">
-        <img src="../Portfolio/assets/images/div-image.3.jpg" alt="Project 2" class="img-thumbnail">
-      </a>
-      <a href="Basic-Rails-App/app/views/welcome/index.html.erb" class="btn btn-primary btn-lg btn-block" role="button">
-        <img src="../Portfolio/assets/images/div-image.4.jpg" alt="Project 3" class="img-thumbnail">
-      </a> 
+      <a href="Blocitoff/app/views/welcome/index.html.erb" class="btn btn-primary btn-lg btn-block" role="button">Project 1</a>
+      <a href="bloc/bloc-jams/index.html" class="btn btn-primary btn-lg btn-block" role="button">Project 2</a>
+      <a href="Basic-Rails-App/app/views/welcome/index.html.erb" class="btn btn-primary btn-lg btn-block" role="button">Project 3</a> 
     </div>
     <hr>
     <div id='contact'>
       <p>e-mail: gloera5@live.com</p>
-      <a href="https://www.linkedin.com/in/genaro-loera-5545b5101?trk=nav_responsive_tab_profile" class="btn btn-info" role="button">Linked In Profile</a> 
+      <a href="https://www.linkedin.com/in/genaro-loera-5545b5101?trk=nav_responsive_tab_profile" class="btn btn-info" role="button">
+        Linked In Profile
+      </a> 
     </div>
     <div>
       <hr>
